# path_jail

./: CHANGELOG.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  README.md
.github/workflows/: ci.yml  release.yml
src/: error.rs  jail.rs  jailed_path.rs  lib.rs  open.rs
tests/: secure_open.rs  security.rs
