[package]
name = "path_jail"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A secure filesystem sandbox. Restricts paths to a root directory, preventing traversal attacks."
repository = "https://github.com/aimable100/path_jail"
keywords = ["security", "filesystem", "sandbox", "path", "traversal"]
categories = ["filesystem", "security"]

[dependencies]
# No runtime dependencies!

[dev-dependencies]
tempfile = "3"